# mascot_companion

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  config.toml  dist.sh  install.sh
.github/workflows/: release.yml
src/: activity.rs  app.rs  banner.rs  compose.rs  config.rs  main.rs  notify.rs  pack.rs  platform.rs  reminder.rs  render.rs  win_present.rs  world.rs
src/creature/: animation.rs  brain.rs  emotion.rs  mod.rs  physics.rs
